--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-scripts": "5.0.1",
     "tailwindcss": "^3.2.4",
     "typescript": "^4.4.2",
+    "wavesurfer.js": "^6.4.0",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
@@ -43,5 +44,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/wavesurfer.js": "^6.0.3"
   }
 }
